--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 ---
 layout: default
 ---
-
-<div class="home">
-  <ul id="container" class="post-list js-packery"
-    data-packery-options='{ "itemSelector": ".item" }'>
-    {% for post in site.posts %}
-      <li class="item{% if post.size > 1 %} {{ post.size }}{% endif %}">
-        <div class="card">
-          <div class="card-image {{ post.color }}">
-            <a href="{{ post.url | prepend: site.baseurl }}">
-                {% if post.image %}
-                <img class="card-back" src="{{ post.image}}" alt="case study image"/>
-                <span class="card-title">
-                    <span class="card-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-                    {{ post.title }}
-                </span>
-                {% else %}
-                <span class="card-title inline">
-                    <span class="card-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-                    {{ post.title }}
-                </span>
-                {% endif %}
-            </a>
-          </div>
-          <div class="card-content">
-            {{ post.excerpt | strip_html }}<p><a href="{{ post.url | prepend: site.baseurl }}">Read the full article</a></p>
-          </div>
+<ul id="post-list" class="js-packery"
+  data-packery-options='{ "itemSelector": ".item", "gutter": ".gutter-sizer" }'>
+  <li class="gutter-sizer"></li>
+  {% for post in site.posts %}
+    <li class="item{% if post.size > 1 %} {{ post.size }}{% endif %}">
+      <figure class="media">
+        <div class="media-img media-img-has-label {{ post.color }}">
+          <a href="{{ post.url | prepend: site.baseurl }}">
+              {% if post.image %}
+              <img src="{{ post.image}}" alt="case study image"/>
+              {% else %}
+              <img src="images/post_default.jpg" alt="case study image"/>
+              {% endif %}
+              <span class="media-img-label">
+                  {{ post.title }}
+                  <span class="media-img-label-sub">by {{post.author}}, {{ post.date | date: "%b %-d, %Y" }}</span>
+              </span>
+          </a>
         </div>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
+        <figcaption>
+          {{ post.excerpt | strip_html }}
+        </figcaption>
+      </figure>
+    </li>
+  {% endfor %}
+</ul>
+<script src="//cdnjs.cloudflare.com/ajax/libs/packery/1.4.2/packery.pkgd.min.js"></script>
+    
